--- a/sources/styles/main.css
+++ b/sources/styles/main.css
@@ -1,27 +1,128 @@
-.container {
-  margin: 0 auto;
-  width: 90%;
-}
-
 header {
   width: 100%;
 }
 
-#popup-header {
+body {
+  font-family: 'Barlow', sans-serif;
+}
+
+.container {
+  margin: 0 auto;
+  width: 80%;
+}
+
+.hidden {
+  display: none;
+}
+
+body header .expanded {
+  height: 0px;
+  padding: 0;
+}
+
+.popup-header {
+  text-align: center;
   height: 90px;
   width: 100%;
   background-color: #EDAB9E;
+  padding: 15px 0;
+  transition-duration: 1s;
 }
+
+
 .popup-content {
   height: 100%;
+  color: white;
+  width: 85%;
+  margin: 0 auto;
+
+}
+.popup-content div{
+  max-width: 33%;
+}
+.popup-content .logocontainer p {
+  font-weight: bold;
+  letter-spacing: 1px;
+  line-height: 20px;
 }
 .popup-content, .logocontainer{
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+.popup-header .popup-content .infos {
+  text-align: left;
+}
+.popup-header .popup-content .infos span {
+  width: 100%;
+  display: block;
+  margin: 5px auto;
+}
 
-.logocontainer img {
+.popup-header .popup-content .logocontainer img {
   width: 30px;
   margin-right: 15px;
+}
+
+.popup-header .popup-content .subscribe span{
+  margin-bottom: 15px;
+}
+.popup-header .popup-content .subscribe form input[type=text]{
+  margin-top: 15px;
+  padding: 10px 25px;
+  border-radius: 15px;
+}
+.popup-header .popup-content .subscribe form input[type=submit]{
+    padding: 10px 20px;
+    border-radius: 15px;
+    background-color: #EE625B;
+    color: white;
+    transform: translateX(-30px);
+    cursor: pointer;
+}
+#cross img{
+  width: 30px;
+  z-index: 99;
+}
+
+/* Navbar + logo */
+ #socials-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 90px;
+}
+
+ #socials-container h1 img {
+  width: 35px;
+}
+
+ #socials-container ul li a {
+  text-decoration: none;
+  color: #425f5c;
+  font-weight: bold;
+}
+
+ #socials-container ul {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-width: 450px;
+}
+
+ #socials-container ul li img{
+  height: 20px;
+}
+ #socials-container ul li:hover {
+  opacity: 0.6;
+}
+
+main{
+  background: no-repeat top url('../images/background.png');
+  background-size: cover;
+}
+
+
+main .discover {
+  height: 900px;
 }
