--- a/sources/styles/main.css
+++ b/sources/styles/main.css
@@ -21,6 +21,8 @@ body {
   padding: 15px 20px;
   border-radius: 30px;
   text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 1px;
 }
 
 body header .expanded {
@@ -145,6 +147,53 @@ main .discover div h1 {
   margin-bottom: 50px;
 }
 
-main .discover div {
+main .video-container {
+  display: none;
+}
 
+main .know-more {
+  z-index: 99;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: calc(100vh - 90px);
+  flex-grow: 0;
+  align-items: center;
+  text-align: center;
+}
+
+main .know-more a {
+  flex-grow: 0;
+}
+main .know-more h2 {
+  font-size: 40px;
+  font-weight: bolder;
+}
+
+main .know-more p {
+  margin: 50px 0;
+}
+
+footer .footer-container {
+  max-height: 90px;
+  display: flex;
+  justify-content: space-around;
+  padding: 40px 0;
+}
+
+footer .footer-container ul {
+  display: flex;
+  align-items: center;
+}
+footer .footer-container ul li {
+  margin: 0 20px;
+}
+footer .footer-container ul li img {
+  height: 20px;
+}
+
+footer .footer-container a {
+  text-decoration: none;
+  color: #425f5c;
+  font-weight: bold;
 }
