--- a/sources/styles/main.css
+++ b/sources/styles/main.css
@@ -12,7 +12,8 @@ body {
 }
 
 .hidden {
-  display: none;
+    height: 0 !important;
+    overflow: hidden;
 }
 .cta {
   text-decoration: none;
@@ -32,10 +33,9 @@ body header .expanded {
 
 .popup-header {
   text-align: center;
-  height: 90px;
+  height: 140px;
   width: 100%;
   background-color: #EDAB9E;
-  padding: 15px 0;
   transition-duration: 1s;
 }
 
@@ -90,9 +90,19 @@ body header .expanded {
     transform: translateX(-30px);
     cursor: pointer;
 }
+#cross {
+
+  transition: opacity 0.7s, visibility 0s 0.1s;
+}
+
+.faded {
+    opacity: 0;
+}
+
 #cross img{
   width: 30px;
   z-index: 99;
+  transform: translateY(-15px);
 }
 
 /* Navbar + logo */
@@ -147,11 +157,8 @@ main .discover div h1 {
   margin-bottom: 50px;
 }
 
-main .video-container {
-  height: 100vh;
-}
 
-main .video-container video {
+main .leftvideo video,  main .rightvideo video{
   width: 100%
 }
 
@@ -160,15 +167,22 @@ main .video-container video {
 #set-height {
   display: block;
 }
-#v0 {
+
+
+.rightvideo {
+  margin: 0 0 ;
+  width: 80%;
+  position: relative;
+  top: 0;
+  right: 0;
+}
+.leftvideo {
+  margin: 0 0 ;
+  width: 80%;
   position: relative;
   top: 0;
   left: 0;
-  width: 100%;
 }
-
-
-
 
 main .know-more {
   z-index: 99;
