--- a/sources/styles/main.css
+++ b/sources/styles/main.css
@@ -139,7 +139,7 @@ body header .expanded {
 
 main{
   background: no-repeat top url('../images/background3.jpg');
-  background-size: cover;
+  background-size: contain;
 }
 
 
@@ -168,13 +168,15 @@ main .leftvideo video,  main .rightvideo video{
   display: block;
 }
 
-
 .rightvideo {
   margin: 0 0 ;
   width: 80%;
+  float: right;
+}
+
+.rightvideo .overlay {
   position: relative;
-  top: 0;
-  right: 0;
+  margin: auto;
 }
 .leftvideo {
   margin: 0 0 ;
@@ -185,14 +187,17 @@ main .leftvideo video,  main .rightvideo video{
 }
 
 main .know-more {
-  z-index: 99;
   display: flex;
   flex-direction: column;
   justify-content: center;
   height: calc(100vh - 90px);
-  flex-grow: 0;
   align-items: center;
   text-align: center;
+}
+main .bg-container {
+  width: 100%;
+  background: no-repeat top url('../images/backgroundbottom.png');
+  background-size: cover;
 }
 
 main .know-more a {
